--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,19 +1,27 @@
-node{
-  stage ('Build') {
+node {
+    // Get Artifactory server instance, defined in the Artifactory Plugin administration page.
+    def server = Artifactory.server "SERVER_ID"
+    // Create an Artifactory Maven instance.
+    def rtMaven = Artifactory.newMavenBuild()
+    def buildInfo
 
-    git url: 'https://github.com/SereginPavel/EasyMoney'
+    stage('Clone sources') {
+        git url: 'https://github.com/SereginPavel/EasyMoney.git'
+    }
 
-    withMaven(
-        // Maven installation declared in the Jenkins "Global Tool Configuration"
-        maven: 'M3',
-        // Maven settings.xml file defined with the Jenkins Config File Provider Plugin
-        // Maven settings and global settings can also be defined in Jenkins Global Tools Configuration
-        mavenSettingsConfig: 'my-maven-settings',
-        mavenLocalRepo: '.repository') {
+    stage('Artifactory configuration') {
+        // Tool name from Jenkins configuration
+        rtMaven.tool = "Maven-3.3.9"
+        // Set Artifactory repositories for dependencies resolution and artifacts deployment.
+        rtMaven.deployer releaseRepo:'libs-release-local', snapshotRepo:'libs-snapshot-local', server: server
+        rtMaven.resolver releaseRepo:'libs-release', snapshotRepo:'libs-snapshot', server: server
+    }
 
-      // Run the maven build
-      sh "mvn clean install"
+    stage('Maven build') {
+        buildInfo = rtMaven.run pom: 'EasyMoney/pom.xml', goals: 'clean install'
+    }
 
-    } // withMaven will discover the generated Maven artifacts, JUnit Surefire & FailSafe reports and FindBugs reports
-  }
+    stage('Publish build info') {
+        server.publishBuildInfo buildInfo
+    }
 }
