change jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,8 @@
-stage("build app") {
-  node {
-      // use the id of the globally configured maven instance
-      def mvnTool = tool 'Maven_3_3_9'
-
-      // execute maven
-      sh "${mvnTool}/bin/mvn clean install"
-  }
-}
+node {
+   stage('checkout') {
+      git 'https://github.com/SereginPavel/EasyMoney.git'
+    }
+    stage('build'){
+        bat 'mvn verify'
+    }
+ }
