--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ node {
     }
 
     stage('install'){
-        copy C:\Program Files (x86)\Jenkins\workspace\pipeline-jenkins-example\target\EasyMoney-1.0.war   C:\Users\SerP\tomcat\webapps\EasyMoney-1.0.war
+        copy C:\\file2.txt C:\\file3.txt
     }
 
  }
