--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ node {
     }
 
     stage('install'){
-        copy C:\\file2.txt C:\\file3.txt
+        copy "C:\\file2.txt C:\\file3.txt"
     }
 
  }
