--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,4 +6,10 @@ node {
     stage('build'){
         bat 'mvn verify'
     }
+
+     stage('Install') {
+                steps {
+                    echo 'Installing....'
+                    bat t.bat
+                }
  }
