--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,5 +9,8 @@ node {
 
      stage('Install') {
         bat 'copy /Y target\\EasyMoney-1.0.war C:\\Users\\SerP\\tomcat\\webapps'
+        bat 'C:\\Users\\SerP\\tomcat\\bin\\shutdown.bat'
+        bat 'C:\\Users\\SerP\\tomcat\\bin\\shutdown.bat'
+        bat 'C:\\Users\\SerP\\tomcat\\bin\\startup.bat'
  }
  }
