--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,8 +8,10 @@ node {
     }
 
      stage('Install') {
-        bat 'copy /Y target\\EasyMoney-1.0.war C:\\Users\\SerP\\tomcat\\webapps'
-        bat 'C:\\Users\\SerP\\tomcat\\bin\\shutdown.bat'
-        bat 'C:\\Users\\SerP\\tomcat\\bin\\startup.bat'
+        bat copy.bat
+     }
+
+    stage('Start Server ') {
+            bat startServer.bat
     }
  }
